--- a/gradle.properties
+++ b/gradle.properties
@@ -30,9 +30,10 @@ android.suppressUnsupportedOptionWarnings=android.suppressUnsupportedOptionWarni
 # JDK Path for Windows
 org.gradle.java.home=C:/Program Files/Android/Android Studio/jbr
 
-# 16KB page size support (automatic with NDK r28+ and AGP 8.5.1+)
-# NDK r28+ compiles 16KB-aligned by default
-# AGP 8.5.1+ automatically enables 16KB alignment during packaging
+# 16KB page size support with NDK r28 and AGP 8.13
+# Force 16KB alignment for all native libraries
+android.experimental.enable16KPageSizes=true
+android.packaging.jniLibs.align16k=true
 
 # Disable Jetifier (not needed for AndroidX projects)
 android.enableJetifier=false
@@ -42,3 +43,6 @@ android.buildFeatures.buildConfig=true
 
 # Keep debug symbols for better debugging
 android.defaultConfig.ndk.debugSymbolLevel=FULL
+
+# Force recompilation and alignment of native libraries
+android.experimental.useLegacyPackaging=false
