fix: resolve CI/CD pipeline failures
- Comment out Windows-specific Java home in gradle.properties for CI compatibility
- Add execute permissions for gradlew in all workflow steps
- Make Slack notifications conditional on webhook availability
- Add error handling for OWASP dependency check when credentials missing
- Add explicit GitHub token permissions for issues and security events

This allows the CI pipeline to run successfully on GitHub Actions runners
while maintaining local development compatibility.

--- a/gradle.properties
+++ b/gradle.properties
@@ -27,8 +27,15 @@ android.suppressUnsupportedOptionWarnings=android.suppressUnsupportedOptionWarni
     android.enableJetifier,\
     android.disableAutomaticComponentCreation
 
-# JDK Path for Windows (commented out for CI/CD compatibility)
+# JDK Path for Windows - Using Android Studio's embedded JDK
+# This resolves the JRE vs JDK toolchain issue
+# Commented out for CI/CD compatibility - CI uses setup-java action
 # org.gradle.java.home=C:/Program Files/Android/Android Studio/jbr
+
+# Alternative JDK paths (uncomment the appropriate one if above doesn't work):
+# org.gradle.java.home=C:/Program Files/Java/jdk-17
+# org.gradle.java.home=C:/Program Files/Java/jdk-21
+# org.gradle.java.home=${JAVA_HOME}
 
 # 16KB page size support with NDK r28 and AGP 8.13
 # Force 16KB alignment for all native libraries
