fix: resolve critical GitHub Actions issues
- Update all artifact actions from v3 to v4 to resolve deprecation warnings
- Fix gradlew permission issues (exit code 126) with proper chmod placement
- Resolve git checkout failures (exit code 128) with safe directory config
- Remove duplicate permission steps causing workflow conflicts
- Update cache actions to v4 for better performance

This should resolve the remaining CI/CD pipeline failures.

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -37,6 +37,9 @@ jobs:
         with:
           fetch-depth: 0  # Full history for better analysis
 
+      - name: Configure git safe directory
+        run: git config --global --add safe.directory "$GITHUB_WORKSPACE"
+
       - name: Set up JDK
         uses: actions/setup-java@v4
         with:
@@ -63,9 +66,6 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
           restore-keys: |
             ${{ runner.os }}-gradle-
-
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
 
       - name: Run Kotlin linting (ktlint)
         run: ./gradlew ktlintCheck --continue
@@ -100,6 +100,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Configure git safe directory
+        run: git config --global --add safe.directory "$GITHUB_WORKSPACE"
 
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
@@ -155,6 +158,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Configure git safe directory
+        run: git config --global --add safe.directory "$GITHUB_WORKSPACE"
+
       - name: Set up JDK
         uses: actions/setup-java@v4
         with:
@@ -191,9 +197,6 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
           restore-keys: |
             ${{ runner.os }}-gradle-
-
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
 
       - name: Build debug APK
         run: ./gradlew assembleDebug --stacktrace
