--- a/.github/workflows/performance-benchmark.yml
+++ b/.github/workflows/performance-benchmark.yml
@@ -43,6 +43,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Configure git safe directory
+        run: git config --global --add safe.directory "$GITHUB_WORKSPACE"
         with:
           fetch-depth: 0
 
@@ -60,9 +63,6 @@ jobs:
         uses: android-actions/setup-android@v3
         with:
           api-level: ${{ matrix.api-level }}
-
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
 
       - name: Build benchmark APK
         run: |
@@ -125,6 +125,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Configure git safe directory
+        run: git config --global --add safe.directory "$GITHUB_WORKSPACE"
+
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
@@ -178,6 +181,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Configure git safe directory
+        run: git config --global --add safe.directory "$GITHUB_WORKSPACE"
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -235,6 +241,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Configure git safe directory
+        run: git config --global --add safe.directory "$GITHUB_WORKSPACE"
+
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
@@ -277,6 +286,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Configure git safe directory
+        run: git config --global --add safe.directory "$GITHUB_WORKSPACE"
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -350,6 +362,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Configure git safe directory
+        run: git config --global --add safe.directory "$GITHUB_WORKSPACE"
 
       - name: Download all benchmark results
         uses: actions/download-artifact@v4
