--- a/.github/workflows/performance-monitoring.yml
+++ b/.github/workflows/performance-monitoring.yml
@@ -41,6 +41,9 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Configure Git
+        run: git config --global --add safe.directory "$GITHUB_WORKSPACE"
+
       - name: Setup JDK
         uses: actions/setup-java@v4
         with:
@@ -49,6 +52,9 @@ jobs:
 
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
+
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
 
       - name: Cache Gradle Dependencies
         uses: actions/cache@v4
@@ -237,6 +243,9 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
+
+      - name: Configure Git
+        run: git config --global --add safe.directory "$GITHUB_WORKSPACE"
 
       - name: Download All Performance Results
         uses: actions/download-artifact@v4
