--- a/.github/workflows/release-management.yml
+++ b/.github/workflows/release-management.yml
@@ -69,6 +69,9 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Configure Git
+        run: git config --global --add safe.directory "$GITHUB_WORKSPACE"
+
       - name: 🔢 Generate Version
         id: version
         run: |
@@ -141,7 +144,7 @@ jobs:
           echo "strategy=$strategy" >> $GITHUB_OUTPUT
 
       - name: 📤 Upload Release Artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: release-config
           path: |
@@ -166,7 +169,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: 📥 Download Release Config
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: release-config
 
@@ -179,8 +182,11 @@ jobs:
       - name: 🤖 Setup Android SDK
         uses: android-actions/setup-android@v3
 
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+
       - name: 📦 Cache Dependencies
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: |
             ~/.gradle/caches
@@ -218,7 +224,7 @@ jobs:
             --output performance-baseline.json
 
       - name: 📤 Upload Release APK
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: release-apk-${{ needs.release-planning.outputs.release_version }}
           path: |
@@ -243,7 +249,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: 📥 Download Artifacts
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: release-apk-${{ needs.release-planning.outputs.release_version }}
           path: artifacts/
@@ -293,7 +299,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: 📥 Download Artifacts
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: release-apk-${{ needs.release-planning.outputs.release_version }}
           path: artifacts/
@@ -342,7 +348,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: 📥 Download Artifacts
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: release-apk-${{ needs.release-planning.outputs.release_version }}
           path: artifacts/
