Add performance benchmark tests for Live API and Pose Detection
- Implemented LiveApiPerformanceTest to evaluate WebSocket connection time, voice response latency, audio streaming performance, network resilience, and memory usage under load.
- Added PoseDetectionPerformanceTest to assess pose detection latency, frame processing throughput, memory usage, CPU usage, and accuracy under performance constraints.
- Both tests follow a TDD approach, ensuring performance requirements are met and optimized for real-world scenarios.

--- a/gradle.properties
+++ b/gradle.properties
@@ -30,7 +30,7 @@ android.suppressUnsupportedOptionWarnings=android.suppressUnsupportedOptionWarni
 # JDK Path for Windows - Using Android Studio's embedded JDK
 # This resolves the JRE vs JDK toolchain issue
 # Commented out for CI/CD compatibility - CI uses setup-java action
-# org.gradle.java.home=C:/Program Files/Android/Android Studio/jbr
+org.gradle.java.home=C:/Program Files/Android/Android Studio/jbr
 
 # Alternative JDK paths (uncomment the appropriate one if above doesn't work):
 # org.gradle.java.home=C:/Program Files/Java/jdk-17
